tests/fail/borrow_move.stderr
error[E0440]: Cannot move 'p' while it is borrowed
 --> tests/fail/borrow_move.tk:20:16
   |
 20 |     auto ^z# = ^p // EXPECT: error[E0440]:
   |                ^
